# BetterBedrockLauncherCore

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: main.rs
src/utils/: logger.rs
