[package]
name = "BetterBedrockLauncherCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
chrono = "0.4.31"
once_cell = { version = "1.19.0", features = [] }
zip = "2.1.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
xml-rs = "0.8.19"

[dependencies.windows]

version = "0.58.0"
features = ["Data_Xml_Dom", "Management", "Management_Deployment", "Foundation_Collections","Win32","Win32_Data_Xml","ApplicationModel"]




